// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackupClient authenticate: logger.error 1`] = `[MockFunction]`;

exports[`BackupClient authenticate: logger.log 1`] = `
[MockFunction] {
  "calls": [
    [
      undefined,
      "context1",
    ],
    [
      undefined,
      "context2",
    ],
    [
      undefined,
      "context3",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`BackupClient authenticate: logger.warn 1`] = `[MockFunction]`;

exports[`BackupClient authenticate: mockClientGrpc.streamLog 1`] = `
[MockFunction] {
  "calls": [
    [
      BackupsGrpcContext {
        "abortable": [],
        "chunkDuplex": undefined,
        "chunkResult": Map {},
        "chunkResultStream": undefined,
        "chunnkResultProcessor": Promise {},
        "client": undefined,
        "currentBackupId": 1,
        "host": "host",
        "ip": "ip",
        "isLocal": false,
        "logger": undefined,
        "originalDate": undefined,
        "sessionId": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": FromAsyncIterable {
        "_selector": [Function],
        "_source": AsyncSink {
          "_ended": true,
          "_resolvers": [],
          "_values": [],
        },
      },
    },
  ],
}
`;

exports[`BackupClient compact: compactManifest 1`] = `
[
  {
    "chunks": [
      {
        "data": [
          115,
          104,
          97,
          50,
          53,
          54,
          95,
          49,
        ],
        "type": "Buffer",
      },
    ],
    "path": {
      "data": [
        102,
        105,
        108,
        101,
        49,
        51,
      ],
      "type": "Buffer",
    },
    "stats": {
      "mode": Long {
        "high": 0,
        "low": 32768,
        "unsigned": false,
      },
      "size": Long {
        "high": 0,
        "low": 100,
        "unsigned": false,
      },
    },
  },
  {
    "path": {
      "data": [
        102,
        105,
        108,
        101,
        49,
        52,
      ],
      "type": "Buffer",
    },
    "stats": {
      "mode": Long {
        "high": 0,
        "low": 32768,
        "unsigned": false,
      },
      "size": Long {
        "high": 0,
        "low": 200,
        "unsigned": false,
      },
    },
  },
  {
    "chunks": [
      {
        "data": [
          115,
          104,
          97,
          50,
          53,
          54,
          95,
          49,
        ],
        "type": "Buffer",
      },
    ],
    "path": {
      "data": [
        102,
        105,
        108,
        101,
        49,
        53,
      ],
      "type": "Buffer",
    },
    "stats": {
      "mode": Long {
        "high": 0,
        "low": 32768,
        "unsigned": false,
      },
      "size": Long {
        "high": 0,
        "low": 300,
        "unsigned": false,
      },
    },
  },
  {
    "path": {
      "data": [
        102,
        105,
        108,
        101,
        49,
        54,
      ],
      "type": "Buffer",
    },
    "stats": {
      "mode": Long {
        "high": 0,
        "low": 32768,
        "unsigned": false,
      },
      "size": Long {
        "high": 0,
        "low": 400,
        "unsigned": false,
      },
    },
  },
  {
    "path": {
      "data": [
        102,
        105,
        108,
        101,
        49,
        55,
      ],
      "type": "Buffer",
    },
    "stats": {
      "mode": Long {
        "high": 0,
        "low": 32768,
        "unsigned": false,
      },
      "size": Long {
        "high": 0,
        "low": 500,
        "unsigned": false,
      },
    },
  },
  {
    "path": {
      "data": [
        102,
        105,
        108,
        101,
        49,
        56,
      ],
      "type": "Buffer",
    },
    "stats": {
      "mode": Long {
        "high": 0,
        "low": 32768,
        "unsigned": false,
      },
      "size": Long {
        "high": 0,
        "low": 600,
        "unsigned": false,
      },
    },
  },
]
`;

exports[`BackupClient compact: result 1`] = `
[
  {
    "chunks": [
      {
        "data": [
          115,
          104,
          97,
          50,
          53,
          54,
          95,
          49,
        ],
        "type": "Buffer",
      },
    ],
    "path": {
      "data": [
        102,
        105,
        108,
        101,
        49,
        51,
      ],
      "type": "Buffer",
    },
    "stats": {
      "mode": Long {
        "high": 0,
        "low": 32768,
        "unsigned": false,
      },
      "size": Long {
        "high": 0,
        "low": 100,
        "unsigned": false,
      },
    },
  },
  {
    "path": {
      "data": [
        102,
        105,
        108,
        101,
        49,
        52,
      ],
      "type": "Buffer",
    },
    "stats": {
      "mode": Long {
        "high": 0,
        "low": 32768,
        "unsigned": false,
      },
      "size": Long {
        "high": 0,
        "low": 200,
        "unsigned": false,
      },
    },
  },
  {
    "chunks": [
      {
        "data": [
          115,
          104,
          97,
          50,
          53,
          54,
          95,
          49,
        ],
        "type": "Buffer",
      },
    ],
    "path": {
      "data": [
        102,
        105,
        108,
        101,
        49,
        53,
      ],
      "type": "Buffer",
    },
    "stats": {
      "mode": Long {
        "high": 0,
        "low": 32768,
        "unsigned": false,
      },
      "size": Long {
        "high": 0,
        "low": 300,
        "unsigned": false,
      },
    },
  },
  {
    "path": {
      "data": [
        102,
        105,
        108,
        101,
        49,
        54,
      ],
      "type": "Buffer",
    },
    "stats": {
      "mode": Long {
        "high": 0,
        "low": 32768,
        "unsigned": false,
      },
      "size": Long {
        "high": 0,
        "low": 400,
        "unsigned": false,
      },
    },
  },
  {
    "path": {
      "data": [
        102,
        105,
        108,
        101,
        49,
        55,
      ],
      "type": "Buffer",
    },
    "stats": {
      "mode": Long {
        "high": 0,
        "low": 32768,
        "unsigned": false,
      },
      "size": Long {
        "high": 0,
        "low": 500,
        "unsigned": false,
      },
    },
  },
  {
    "path": {
      "data": [
        102,
        105,
        108,
        101,
        49,
        56,
      ],
      "type": "Buffer",
    },
    "stats": {
      "mode": Long {
        "high": 0,
        "low": 32768,
        "unsigned": false,
      },
      "size": Long {
        "high": 0,
        "low": 600,
        "unsigned": false,
      },
    },
  },
]
`;

exports[`BackupClient countRef: mockPoolChunkRefCnt.addBackupRefcntTo 1`] = `
[MockFunction] {
  "calls": [
    [
      "host-1/REFCNT.backup",
      undefined,
      undefined,
      undefined,
    ],
    [
      "host/REFCNT.host",
      "host-1/REFCNT.backup",
      undefined,
      undefined,
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`BackupClient countRef: mockPoolChunkRefCnt.addReferenceCountToRefCnt 1`] = `
[MockFunction] {
  "calls": [
    [
      ConcatMapAsyncIterable {
        "_selector": [Function],
        "_source": ConcatMapAsyncIterable {
          "_selector": [Function],
          "_source": FromAsyncIterable {
            "_selector": [Function],
            "_source": [
              Manifest {
                "fileListPath": "host-1/home.filelist",
                "journalPath": "host-1/home.journal",
                "lockPath": "host-1/home.lock",
                "manifestPath": "host-1/home.manifest",
                "newPath": "host-1/home.new",
              },
              Manifest {
                "fileListPath": "host-1/etc.filelist",
                "journalPath": "host-1/etc.journal",
                "lockPath": "host-1/etc.lock",
                "manifestPath": "host-1/etc.manifest",
                "newPath": "host-1/etc.new",
              },
            ],
          },
          "_thisArg": undefined,
        },
        "_thisArg": undefined,
      },
      "host-1/REFCNT.backup",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`BackupClient createBackup: refcntHost 1`] = `
[
  {
    "compressedSize": 50,
    "refCount": 0,
    "sha256": {
      "data": [
        115,
        104,
        97,
        50,
        53,
        54,
        95,
        49,
      ],
      "type": "Buffer",
    },
    "size": 100,
  },
  {
    "compressedSize": 150,
    "refCount": 0,
    "sha256": {
      "data": [
        115,
        104,
        97,
        50,
        53,
        54,
        95,
        50,
      ],
      "type": "Buffer",
    },
    "size": 300,
  },
  {
    "compressedSize": 250,
    "refCount": 0,
    "sha256": {
      "data": [
        115,
        104,
        97,
        50,
        53,
        54,
        95,
        51,
      ],
      "type": "Buffer",
    },
    "size": 500,
  },
  {
    "compressedSize": 100,
    "refCount": 0,
    "sha256": {
      "data": [
        110,
        101,
        119,
        83,
        104,
        97,
        50,
        53,
        54,
        95,
        50,
      ],
      "type": "Buffer",
    },
    "size": 200,
  },
  {
    "compressedSize": 200,
    "refCount": 0,
    "sha256": {
      "data": [
        110,
        101,
        119,
        83,
        104,
        97,
        50,
        53,
        54,
        95,
        52,
      ],
      "type": "Buffer",
    },
    "size": 400,
  },
  {
    "compressedSize": 300,
    "refCount": 0,
    "sha256": {
      "data": [
        110,
        101,
        119,
        83,
        104,
        97,
        50,
        53,
        54,
        95,
        54,
      ],
      "type": "Buffer",
    },
    "size": 600,
  },
]
`;

exports[`BackupClient createBackup: result 1`] = `
[
  {
    "compressedSize": 50n,
    "sha256": {
      "data": [
        115,
        104,
        97,
        50,
        53,
        54,
        95,
        49,
      ],
      "type": "Buffer",
    },
    "size": 100n,
  },
  {
    "compressedSize": 150n,
    "sha256": {
      "data": [
        115,
        104,
        97,
        50,
        53,
        54,
        95,
        50,
      ],
      "type": "Buffer",
    },
    "size": 300n,
  },
  {
    "compressedSize": 250n,
    "sha256": {
      "data": [
        115,
        104,
        97,
        50,
        53,
        54,
        95,
        51,
      ],
      "type": "Buffer",
    },
    "size": 500n,
  },
  {
    "compressedSize": 100n,
    "sha256": {
      "data": [
        110,
        101,
        119,
        83,
        104,
        97,
        50,
        53,
        54,
        95,
        50,
      ],
      "type": "Buffer",
    },
    "size": 200n,
  },
  {
    "compressedSize": 200n,
    "sha256": {
      "data": [
        110,
        101,
        119,
        83,
        104,
        97,
        50,
        53,
        54,
        95,
        52,
      ],
      "type": "Buffer",
    },
    "size": 400n,
  },
  {
    "manifest": {
      "chunks": [
        {
          "data": [
            115,
            104,
            97,
            50,
            53,
            54,
            95,
            49,
          ],
          "type": "Buffer",
        },
      ],
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          55,
        ],
        "type": "Buffer",
      },
      "stats": {
        "compressedSize": Long {
          "high": 0,
          "low": 50,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 100,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "compressedSize": 300n,
    "sha256": {
      "data": [
        110,
        101,
        119,
        83,
        104,
        97,
        50,
        53,
        54,
        95,
        54,
      ],
      "type": "Buffer",
    },
    "size": 600n,
  },
  {
    "manifest": {
      "chunks": [
        {
          "data": [
            115,
            104,
            97,
            50,
            53,
            54,
            95,
            50,
          ],
          "type": "Buffer",
        },
      ],
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          57,
        ],
        "type": "Buffer",
      },
      "stats": {
        "compressedSize": Long {
          "high": 0,
          "low": 150,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 300,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "chunks": [
        {
          "data": [
            115,
            104,
            97,
            50,
            53,
            54,
            95,
            51,
          ],
          "type": "Buffer",
        },
      ],
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          49,
          49,
        ],
        "type": "Buffer",
      },
      "stats": {
        "compressedSize": Long {
          "high": 0,
          "low": 250,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 500,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "chunks": [
        {
          "data": [
            110,
            101,
            119,
            83,
            104,
            97,
            50,
            53,
            54,
            95,
            50,
          ],
          "type": "Buffer",
        },
      ],
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          56,
        ],
        "type": "Buffer",
      },
      "stats": {
        "compressedSize": Long {
          "high": 0,
          "low": 100,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 200,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "chunks": [
        {
          "data": [
            110,
            101,
            119,
            83,
            104,
            97,
            50,
            53,
            54,
            95,
            52,
          ],
          "type": "Buffer",
        },
      ],
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          49,
          48,
        ],
        "type": "Buffer",
      },
      "stats": {
        "compressedSize": Long {
          "high": 0,
          "low": 200,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 400,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "chunks": [
        {
          "data": [
            110,
            101,
            119,
            83,
            104,
            97,
            50,
            53,
            54,
            95,
            54,
          ],
          "type": "Buffer",
        },
      ],
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          49,
          50,
        ],
        "type": "Buffer",
      },
      "stats": {
        "compressedSize": Long {
          "high": 0,
          "low": 300,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 600,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
]
`;

exports[`BackupClient createBackup: savedJournal 1`] = `
[
  {
    "manifest": {
      "chunks": [
        {
          "data": [
            115,
            104,
            97,
            50,
            53,
            54,
            95,
            49,
          ],
          "type": "Buffer",
        },
      ],
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          55,
        ],
        "type": "Buffer",
      },
      "stats": {
        "compressedSize": Long {
          "high": 0,
          "low": 50,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 100,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "chunks": [
        {
          "data": [
            115,
            104,
            97,
            50,
            53,
            54,
            95,
            50,
          ],
          "type": "Buffer",
        },
      ],
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          57,
        ],
        "type": "Buffer",
      },
      "stats": {
        "compressedSize": Long {
          "high": 0,
          "low": 150,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 300,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "chunks": [
        {
          "data": [
            115,
            104,
            97,
            50,
            53,
            54,
            95,
            51,
          ],
          "type": "Buffer",
        },
      ],
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          49,
          49,
        ],
        "type": "Buffer",
      },
      "stats": {
        "compressedSize": Long {
          "high": 0,
          "low": 250,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 500,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "chunks": [
        {
          "data": [
            110,
            101,
            119,
            83,
            104,
            97,
            50,
            53,
            54,
            95,
            50,
          ],
          "type": "Buffer",
        },
      ],
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          56,
        ],
        "type": "Buffer",
      },
      "stats": {
        "compressedSize": Long {
          "high": 0,
          "low": 100,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 200,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "chunks": [
        {
          "data": [
            110,
            101,
            119,
            83,
            104,
            97,
            50,
            53,
            54,
            95,
            52,
          ],
          "type": "Buffer",
        },
      ],
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          49,
          48,
        ],
        "type": "Buffer",
      },
      "stats": {
        "compressedSize": Long {
          "high": 0,
          "low": 200,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 400,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "chunks": [
        {
          "data": [
            110,
            101,
            119,
            83,
            104,
            97,
            50,
            53,
            54,
            95,
            54,
          ],
          "type": "Buffer",
        },
      ],
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          49,
          50,
        ],
        "type": "Buffer",
      },
      "stats": {
        "compressedSize": Long {
          "high": 0,
          "low": 300,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 600,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
]
`;

exports[`BackupClient createBackup: wrappers 1`] = `
[
  [
    "chunk1",
    "chunk2",
  ],
  [
    "chunk1",
    "chunk2",
  ],
  [
    "chunk1",
    "chunk2",
  ],
]
`;

exports[`BackupClient getFileList: downloadFileList 1`] = `
[MockFunction] {
  "calls": [
    [
      BackupsGrpcContext {
        "abortable": [],
        "chunkDuplex": undefined,
        "chunkResult": Map {},
        "chunkResultStream": undefined,
        "chunnkResultProcessor": Promise {},
        "client": undefined,
        "currentBackupId": 1,
        "host": "host",
        "ip": "ip",
        "isLocal": false,
        "logger": undefined,
        "originalDate": undefined,
        "sessionId": undefined,
      },
      {
        "excludes": [],
        "includes": [],
        "sharePath": {
          "data": [
            115,
            104,
            97,
            114,
            101,
            80,
            97,
            116,
            104,
          ],
          "type": "Buffer",
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": FromAsyncIterable {
        "_selector": [Function],
        "_source": [
          {
            "manifest": {
              "path": {
                "data": [
                  102,
                  105,
                  108,
                  101,
                  49,
                ],
                "type": "Buffer",
              },
              "stats": {
                "mode": Long {
                  "high": 0,
                  "low": 32768,
                  "unsigned": false,
                },
                "size": Long {
                  "high": 0,
                  "low": 100,
                  "unsigned": false,
                },
              },
            },
            "type": 0,
          },
          {
            "manifest": {
              "path": {
                "data": [
                  102,
                  105,
                  108,
                  101,
                  50,
                ],
                "type": "Buffer",
              },
              "stats": {
                "mode": Long {
                  "high": 0,
                  "low": 32768,
                  "unsigned": false,
                },
                "size": Long {
                  "high": 0,
                  "low": 200,
                  "unsigned": false,
                },
              },
            },
            "type": 0,
          },
          {
            "manifest": {
              "path": {
                "data": [
                  102,
                  105,
                  108,
                  101,
                  51,
                ],
                "type": "Buffer",
              },
              "stats": {
                "mode": Long {
                  "high": 0,
                  "low": 32768,
                  "unsigned": false,
                },
                "size": Long {
                  "high": 0,
                  "low": 300,
                  "unsigned": false,
                },
              },
            },
            "type": 0,
          },
          {
            "manifest": {
              "path": {
                "data": [
                  102,
                  105,
                  108,
                  101,
                  52,
                ],
                "type": "Buffer",
              },
              "stats": {
                "mode": Long {
                  "high": 0,
                  "low": 32768,
                  "unsigned": false,
                },
                "size": Long {
                  "high": 0,
                  "low": 400,
                  "unsigned": false,
                },
              },
            },
            "type": 0,
          },
          {
            "manifest": {
              "path": {
                "data": [
                  102,
                  105,
                  108,
                  101,
                  53,
                ],
                "type": "Buffer",
              },
              "stats": {
                "mode": Long {
                  "high": 0,
                  "low": 32768,
                  "unsigned": false,
                },
                "size": Long {
                  "high": 0,
                  "low": 500,
                  "unsigned": false,
                },
              },
            },
            "type": 0,
          },
          {
            "manifest": {
              "path": {
                "data": [
                  102,
                  105,
                  108,
                  101,
                  54,
                ],
                "type": "Buffer",
              },
              "stats": {
                "mode": Long {
                  "high": 0,
                  "low": 32768,
                  "unsigned": false,
                },
                "size": Long {
                  "high": 0,
                  "low": 600,
                  "unsigned": false,
                },
              },
            },
            "type": 0,
          },
        ],
      },
    },
  ],
}
`;

exports[`BackupClient getFileList: result 1`] = `
[
  {
    "manifest": {
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          49,
        ],
        "type": "Buffer",
      },
      "stats": {
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 100,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          50,
        ],
        "type": "Buffer",
      },
      "stats": {
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 200,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          51,
        ],
        "type": "Buffer",
      },
      "stats": {
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 300,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          52,
        ],
        "type": "Buffer",
      },
      "stats": {
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 400,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          53,
        ],
        "type": "Buffer",
      },
      "stats": {
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 500,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          54,
        ],
        "type": "Buffer",
      },
      "stats": {
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 600,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
]
`;

exports[`BackupClient getFileList: savedFilelist 1`] = `
[
  {
    "manifest": {
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          49,
        ],
        "type": "Buffer",
      },
      "stats": {
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 100,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          50,
        ],
        "type": "Buffer",
      },
      "stats": {
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 200,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          51,
        ],
        "type": "Buffer",
      },
      "stats": {
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 300,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          52,
        ],
        "type": "Buffer",
      },
      "stats": {
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 400,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          53,
        ],
        "type": "Buffer",
      },
      "stats": {
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 500,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  {
    "manifest": {
      "path": {
        "data": [
          102,
          105,
          108,
          101,
          54,
        ],
        "type": "Buffer",
      },
      "stats": {
        "mode": Long {
          "high": 0,
          "low": 32768,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 600,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
]
`;
